[project]
name = "kiki-models"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.73",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "openai",          # OpenAI-compat client for testing adapters
    "anthropic",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
